--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "jsonp": "^0.2.1",
     "open-browser-webpack-plugin": "^0.0.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
+    "vue-icon-font": "^1.0.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
