--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "better-scroll": "^1.12.6",
     "jsonp": "^0.2.1",
     "open-browser-webpack-plugin": "^0.0.5",
     "stylus": "^0.54.5",
