--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.12.6",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.4.9",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "open-browser-webpack-plugin": "^0.0.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
