--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
+    "vue-bus": "^1.1.0",
     "vue-icon-font": "^1.0.3",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
