feat: 大更新，新增非常多的新功能

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.12.6",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.1.0",
     "js-base64": "^2.4.9",
     "jsonp": "^0.2.1",
     "lodash": "^4.17.11",
