--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-icon-font": "^1.0.3",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
