--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
     "api": "node api/app.js",
-    "init": "yarn install && cd api && yarn install",
-    "start": "yarn run api | yarn run dev"
+    "go": "node server/prod.server.js",
+    "init": "cd api && npm install && cd .. && npm install && npm run build",
+    "start": "npm run api | npm run go"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -40,6 +41,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
+    "compression-webpack-plugin": "1.1.12",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
@@ -57,6 +59,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "open-browser-webpack-plugin": "^0.0.5",
+    "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
