--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "body-parser": "^1.18.3",
     "chalk": "^2.0.1",
+    "compression": "^1.7.3",
     "compression-webpack-plugin": "1.1.12",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -53,6 +55,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -62,7 +65,7 @@
     "opn": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
+    "portfinder": "^1.0.20",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
